--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+
+    <script src="/src/stores/UrlConstants.js"></script>
+    <script src="/src/stores/UrlsActions.js.js"></script>
+      <script src="/src/stores/UrlStore.js.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
